--- a/index.html
+++ b/index.html
@@ -5,14 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="icon" href="assets/bVelzHO.png">
+    <link rel="icon" href="assets/psyduck.png">
     <title>Ryan's Pokédex</title>
 </head>
 
 <body>
 
+    <main class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <h1>Ryan's Pokédex</h1>
+            </div>
+        </div>
+        <div class="row mypokemon">
 
+            </div>
+            <hr>
+            <div class="row allpokemon">
+
+                </div>
+
+
+    </main>
 
 
 
