--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="row">
             <div class="col">
                 <h1>Ryan's Pokédex</h1>
+                <div id="buttons-pokemon"></div>
             </div>
         </div>
         <div class="row mypokemon">
