--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="assets/psyduck.png">
     <title>Ryan's Pokédex</title>
@@ -17,27 +18,21 @@
         <div class="row">
             <div class="col">
                 <h1>Ryan's Pokédex</h1>
-                <div id="buttons-pokemon"></div>
             </div>
         </div>
         <div class="row mypokemon">
+            
+        </div>
+        <hr>
+        <div id="buttons-pokemon"></div>
+        <div class="row allpokemon">
 
-            </div>
-            <hr>
-            <div class="row allpokemon">
+        </div>
+        <div id="row active-pokemon">
 
-                </div>
-
+        </div>
 
     </main>
-
-
-
-
-
-
-
-
 
     <!-- EXTERNAL LIBRARIES -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
