--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
             </div>
         </div>
         <div class="row mypokemon">
-            
+
         </div>
         <hr>
-        <div id="buttons-pokemon"></div>
-        <div class="row allpokemon">
-
-        </div>
-        <div id="row active-pokemon">
-
+        <div class="row">
+            <div class="col-6">
+                <div id="buttons-pokemon"></div>
+                <div class="row allpokemon"></div>
+            </div>
+            <div class="col-6">
+                <div id="row active-pokemon"></div>
+            </div>
         </div>
 
     </main>
