--- a/index.html
+++ b/index.html
@@ -5,40 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="icon" href="assets/psyduck.png">
-    <title>Ryan's Pokédex</title>
+    <title>Pokedex</title>
 </head>
 
 <body>
 
-    <main class="container-fluid">
+    <section class="container-fluid">
+        <h1>Ryan's Pokedex</h1>
         <div class="row">
-            <div class="col">
-                <h1>Ryan's Pokédex</h1>
+            <div class="col-4">
+                <ul id="api-pokemon">
+                    <!-- List here -->
+                </ul>
+            </div>
+            <div id="active-pokemon" class="col-4">
+                <!-- Active here -->
+            </div>
+            <div class="col-4">
+                <!-- My pokemon here -->
             </div>
         </div>
-        <div class="row mypokemon">
+    </section>
 
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col-6">
-                <div id="buttons-pokemon"></div>
-                <div class="row allpokemon"></div>
-            </div>
-            <div class="col-6">
-                <div id="row active-pokemon"></div>
-            </div>
-        </div>
-
-    </main>
-
-    <!-- EXTERNAL LIBRARIES -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
-    <!-- MAIN APP -->
     <script type="module" src="app/main.js"></script>
 </body>
 
