--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <h1>Ryan's Pokedex</h1>
         <div class="row">
             <div class="col-4">
+                <div id="buttons">
+                    <!-- buttons here -->
+                </div>
                 <ul id="api-pokemon">
                     <!-- List here -->
                 </ul>
