--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <div id="buttons">
                     <!-- buttons here -->
                 </div>
-                <ul id="api-pokemon">
+                <ol id="api-pokemon">
                     <!-- List here -->
-                </ul>
+                </ol>
             </div>
             <div id="active-pokemon" class="col-4">
                 <!-- Active here -->
