--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Pokedex</title>
+    <link rel="icon" href="assets/psyduck.png">
+    <title>Ryan's Pokedex</title>
 </head>
 
 <body>
@@ -17,19 +18,19 @@
     <section class="container-fluid">
         <h1>Ryan's Pokedex</h1>
         <div class="row">
-            <div class="col-4">
+            <div class="col-12 col-md-4">
                 <div id="buttons">
                     <!-- buttons here -->
                 </div>
                 <ol id="api-pokemon">
-                    <!-- List here -->
+                    <!-- List Pokemon here -->
                 </ol>
             </div>
-            <div id="active-pokemon" class="col-4">
-                <!-- Active here -->
+            <div id="active-pokemon" class="col-12 col-md-4">
+                <!-- Active Pokemon here -->
             </div>
-            <div class="col-4">
-                <!-- My pokemon here -->
+            <div id="my-pokemon" class="col-12 col-md-4">
+                <!-- My Pokemon here -->
             </div>
         </div>
     </section>
