--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="assets/psyduck.png">
-    <title>Ryan's Pokedex</title>
+    <title>Ryan's Pokédex</title>
 </head>
 
 <body>
 
     <section class="container-fluid">
-        <h1>Ryan's Pokedex</h1>
+        <h1>Ryan's Pokédex</h1>
         <div class="row">
             <div class="col-12 col-md-4">
                 <div id="buttons">
