--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="assets/psyduck.png">
     <title>Ryan's Pokédex</title>
-</head>
-
-<body>
-
+</head
     <section class="container-fluid">
         <h1>Ryan's Pokédex</h1>
         <div class="row">
-            <div class="col-12 col-md-4">
+            <div class="col-4">
                 <div id="buttons">
                     <!-- buttons here -->
                 </div>
@@ -26,10 +23,10 @@
                     <!-- List Pokemon here -->
                 </ol>
             </div>
-            <div id="active-pokemon" class="col-12 col-md-4">
+            <div id="active-pokemon" class="col-4">
                 <!-- Active Pokemon here -->
             </div>
-            <div id="my-pokemon" class="col-12 col-md-4">
+            <div id="my-pokemon" class="col-4">
                 <!-- My Pokemon here -->
             </div>
         </div>
