--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Ryan's Pokédex</title>
 </head
     <section class="container-fluid">
-        <h1>Ryan's Pokédex</h1>
+        <h1 class="text-center">Ryan's Pokédex</h1>
         <div class="row">
             <div class="col-4">
                 <div id="buttons">
