--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="assets/psyduck.png">
     <title>Ryan's Pokédex</title>
-</head
+</head>
+<body>
     <section class="container-fluid">
         <h1 class="text-center">Ryan's Pokédex</h1>
         <div class="row">
