--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <!-- Active Pokemon here -->
             </div>
             <div id="my-pokemon" class="col-4">
+                <h3>My Pokémon:</h3>
                 <!-- My Pokemon here -->
             </div>
         </div>
