--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <link rel="icon" href="assets/psyduck.png">
     <title>Ryan's Pokédex</title>
 </head>
+
 <body>
     <section class="container-fluid">
-        <h1 class="text-center">Ryan's Pokédex</h1>
+        <div class="text-center">
+            <img id="title" src="assets/pokedex.png">
+        </div>
         <div class="row">
             <div class="col-4">
                 <div id="buttons">
