--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <!-- buttons here -->
                 </div>
                 <ol id="api-pokemon">
-                    <!-- List Pokemon here -->
+                    <!-- List all Pokemon here -->
                 </ol>
             </div>
             <div id="active-pokemon" class="col-4">
