Removed last comma in types

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <div id="buttons">
                     <!-- buttons here -->
                 </div>
-                <ol id="api-pokemon">
+                <div id="api-pokemon">
                     <!-- List all Pokemon here -->
-                </ol>
+                </div>
             </div>
             <div id="active-pokemon" class="col-4">
                 <!-- Active Pokemon here -->
