--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <!-- List all Pokemon here -->
                 </div>
             </div>
-            <div id="active-pokemon" class="col-4">
+            <div id="active-pokemon" class="col-12 col-lg-4">
                 <!-- Active Pokemon here -->
             </div>
-            <div id="my-pokemon" class="col-4">
+            <div id="my-pokemon" class="col-12 col-lg-4 text-right">
                 <!-- My Pokemon here -->
             </div>
         </div>
